--- a/index.html
+++ b/index.html
@@ -33,117 +33,122 @@
           render.innerHTML = text;
       "></textarea>
       <!-- We load all the audio files so that there's no lag on pressing keys -->
-      <audio id="keypress-1.0" controls style="display: none">
+      <image class="inactive-image" src="2.jpg"></image>
+      <image class="inactive-image" src="3.jpg"></image>
+      <image class="inactive-image" src="4.jpg"></image>
+      <image class="inactive-image" src="5.jpg"></image>
+      <audio id="keypress-1.0"  class="audio">
         <source src="sounds/keypress-1.0.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-1.1" controls style="display: none">
+      <audio id="keypress-1.1" class="audio">
         <source src="sounds/keypress-1.1.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-1.2" controls style="display: none"> 
+      <audio id="keypress-1.2" class="audio"> 
         <source src="sounds/keypress-1.2.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-1.3" controls style="display: none">
+      <audio id="keypress-1.3" class="audio">
         <source src="sounds/keypress-1.3.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-1.4" controls style="display: none">
+      <audio id="keypress-1.4" class="audio">
         <source src="sounds/keypress-1.4.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-1.5" controls style="display: none">
+      <audio id="keypress-1.5" class="audio">
         <source src="sounds/keypress-1.5.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-1.6" controls style="display: none">
+      <audio id="keypress-1.6" class="audio">
         <source src="sounds/keypress-1.6.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-1.7" controls style="display: none">
+      <audio id="keypress-1.7" class="audio">
         <source src="sounds/keypress-1.7.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-1.8" controls style="display: none">
+      <audio id="keypress-1.8" class="audio">
         <source src="sounds/keypress-1.8.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-1.9" controls style="display: none">
+      <audio id="keypress-1.9" class="audio">
         <source src="sounds/keypress-1.9.mp3" type="audio/mpeg">
       </audio>
-      <audio id="return-1" controls style="display: none">
+      <audio id="return-1" class="audio">
         <source src="sounds/return-1.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-2.0" controls style="display: none">
+      <audio id="keypress-2.0" class="audio">
         <source src="sounds/keypress-2.0.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-2.1" controls style="display: none">
+      <audio id="keypress-2.1" class="audio">
         <source src="sounds/keypress-2.1.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-2.2" controls style="display: none">
+      <audio id="keypress-2.2" class="audio">
         <source src="sounds/keypress-2.2.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-2.3" controls style="display: none">
+      <audio id="keypress-2.3" class="audio">
         <source src="sounds/keypress-2.3.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-2.4" controls style="display: none">
+      <audio id="keypress-2.4" class="audio">
         <source src="sounds/keypress-2.4.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-2.5" controls style="display: none">
+      <audio id="keypress-2.5" class="audio">
         <source src="sounds/keypress-2.5.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-2.6" controls style="display: none">
+      <audio id="keypress-2.6" class="audio">
         <source src="sounds/keypress-2.6.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-2.7" controls style="display: none">
+      <audio id="keypress-2.7" class="audio">
         <source src="sounds/keypress-2.7.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-2.8" controls style="display: none">
+      <audio id="keypress-2.8" class="audio">
         <source src="sounds/keypress-2.8.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-2.9" controls style="display: none">
+      <audio id="keypress-2.9" class="audio">
         <source src="sounds/keypress-2.9.mp3" type="audio/mpeg">
       </audio>
-      <audio id="return-2" controls style="display: none">
+      <audio id="return-2" class="audio">
         <source src="sounds/return-2.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-3.0" controls style="display: none">
+      <audio id="keypress-3.0" class="audio">
         <source src="sounds/keypress-3.0.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-3.1" controls style="display: none">
+      <audio id="keypress-3.1" class="audio">
         <source src="sounds/keypress-3.1.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-3.2" controls style="display: none">
+      <audio id="keypress-3.2" class="audio">
         <source src="sounds/keypress-3.2.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-3.3" controls style="display: none">
+      <audio id="keypress-3.3" class="audio">
         <source src="sounds/keypress-3.3.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-3.4" controls style="display: none">
+      <audio id="keypress-3.4" class="audio">
         <source src="sounds/keypress-3.4.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-3.5" controls style="display: none">
+      <audio id="keypress-3.5" class="audio">
         <source src="sounds/keypress-3.5.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-3.6" controls style="display: none">
+      <audio id="keypress-3.6" class="audio">
         <source src="sounds/keypress-3.6.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-3.7" controls style="display: none">
+      <audio id="keypress-3.7" class="audio">
         <source src="sounds/keypress-3.7.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-3.8" controls style="display: none">
+      <audio id="keypress-3.8" class="audio">
         <source src="sounds/keypress-3.8.mp3" type="audio/mpeg">
       </audio>
-      <audio id="keypress-3.9" controls style="display: none">
+      <audio id="keypress-3.9" class="audio">
         <source src="sounds/keypress-3.9.mp3" type="audio/mpeg">
       </audio>
-      <audio id="return-3" controls style="display: none">
+      <audio id="return-3" class="audio">
         <source src="sounds/return-3.mp3" type="audio/mpeg">
       </audio>
-      <audio id="ambient-1" loop style="display: none">
+      <audio id="ambient-1" loop class="audio">
         <source src="sounds/ambient-1.mp3">
       </audio>
-      <audio id="ambient-2" loop style="display: none">
+      <audio id="ambient-2" loop class="audio">
         <source src="sounds/ambient-2.mp3">
       </audio>
-      <audio id="ambient-3" loop style="display: none">
+      <audio id="ambient-3" loop class="audio">
         <source src="sounds/ambient-3.mp3">
       </audio>
-      <audio id="ambient-4" loop style="display: none">
+      <audio id="ambient-4" loop class="audio">
         <source src="sounds/ambient-4.mp3">
       </audio>
+      
     </div>
   </div>
 
