--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           render.innerHTML = text;
       "></textarea>
       <!-- We load all the audio files so that there's no lag on pressing keys -->
+      <image class="inactive-image" src="1.jpg"></image>
       <image class="inactive-image" src="2.jpg"></image>
       <image class="inactive-image" src="3.jpg"></image>
       <image class="inactive-image" src="4.jpg"></image>
