--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
   <link rel="stylesheet" href="index.css">
   <link rel="shortcut icon" href="#">
 </head>
-
 <body id="body">
   <div class="container">
     <div class="textrender">
@@ -19,30 +17,35 @@
       </div>
     </div>
     <div class="icons js-icons icons-div">
-      <div class="icon-div-1 icon-divs">
-        <img onclick="flashIcon(1)" class="js-icon-1 image-style-1" id="js-icon-1" src="images/keyboard.png">
-      </div>
-      <div class="icon-div-2 icon-divs">
-        <img onclick="flashIcon(2)" class="js-icon-2 image-style-1" id="js-icon-2" src="images/playarrow.png">
-      </div>
-      <div class="icon-div-3 icon-divs">
-        <img onclick="flashIcon(3); changeBackground()" class="js-icon-3 image-style-1" id="js-icon-3"
-          class="icon js-icon" src="images/bgimage.png">
-      </div>
-      <div class="icon-div-4 icon-divs">
-        <img onclick="flashIcon(4)" id="js-icon-4" class="js-icon-4 image-style-1" id="js-icon-4" src="images/fullscreenon.png">
-      </div>
-      <div class="icon-div-5 icon-divs">
-        <img onclick="flashIcon(5)" class="js-icon-5 image-style-1" id="js-icon-5" src="images/download.png">
+      <div class="icons-container">
+        <button id="button-1" class="button-style-1 js-button js-button-1" data-tooltip="change keys"
+          onclick="flashIcon(1) ">
+          <img id="js-icon-1" class="js-icon-1 image-style-1 js-button" src="images/keyboard.png">
+        </button>
+        <button id="button-2" class="button-style-1 js-button js-button-2" data-tooltip="ambience"
+          onclick="flashIcon(2)">
+          <img id="js-icon-2" class="js-icon-2 image-style-1 js-button" src="images/playarrow.png">
+        </button>
+        <button class="button-style-1 js-button js-button-3" id="button-3" data-tooltip="change rooms"
+          onclick="flashIcon(3); changeBackground()">
+          <img class="js-icon-3 image-style-1" id="js-icon-3" class="icon js-icon" src="images/bgimage.png">
+        </button>
+        <button class="button-style-1 js-button" id="button-4" data-tooltip="fullscreen" onclick="flashIcon(4)">
+          <img id="js-icon-4" class="js-icon-4 image-style-1" id="js-icon-4" src="images/fullscreenon.png">
+        </button>
+        <button class="button-style-1 js-button" id="button-5" data-tooltip="download" onclick="flashIcon(5)">
+          <img class="js-icon-5 image-style-1" id="js-icon-5" src="images/download.png">
+        </button>
       </div>
     </div>
     <div class="inputarea">
-      <textarea class="input-element js-input-element" id="js-input-element" onkeyup=" 
+      <div class="inputarea-displace">
+        <textarea class="input-element js-input-element" id="js-input-element" onkeyup=" 
           text = input.value;
           render.innerHTML = text;
       "></textarea>
+      </div>
       <!-- We load all the audio files and images so that there's no lag later on -->
-
       <image class="inactive-image" src="1.jpg"></image>
       <image class="inactive-image" src="2.jpg"></image>
       <image class="inactive-image" src="3.jpg"></image>
@@ -159,12 +162,9 @@
       <audio id="ambient-4" loop class="audio">
         <source src="sounds/ambient-4.mp3">
       </audio>
-
     </div>
   </div>
-
   <script src="index.js">
   </script>
 </body>
-
 </html>
