--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="index.css">
   <link rel="shortcut icon" href="#">
 </head>
+
 <body id="body">
   <div class="container">
     <div class="textrender">
@@ -33,9 +35,12 @@
         <button class="button-style-1 js-button" id="button-4" data-tooltip="fullscreen" onclick="flashIcon(4)">
           <img id="js-icon-4" class="js-icon-4 image-style-1" id="js-icon-4" src="images/fullscreenon.png">
         </button>
-        <button class="button-style-1 js-button" id="button-5" data-tooltip="download" onclick="flashIcon(5)">
-          <img class="js-icon-5 image-style-1" id="js-icon-5" src="images/download.png">
-        </button>
+        <a>
+          <button class="button-style-1 js-button" id="button-5" data-tooltip="download"
+            onclick="flashIcon(5)">
+            <img class="js-icon-5 image-style-1" id="js-icon-5" src="images/download.png">
+          </button>
+        </a>
       </div>
     </div>
     <div class="inputarea">
@@ -167,4 +172,5 @@
   <script src="index.js">
   </script>
 </body>
+
 </html>
